Submit method is overriden

--- a/static/index.html
+++ b/static/index.html
@@ -19,9 +19,10 @@ alex@express42.com</textarea>
       </div>
       <div id="result"></div>
       <div id="loading"></div>
-      <form id="future-devops" action="/levenstein" method="POST">
+      <form id="future-devops">
         <input type="submit" align="right">
       </form>
+      <script type="text/javascript" src="submitForm.js"></script>
     </div>
   </body>
 </html>
