--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@ docker</textarea>
 alex@express42.com</textarea>
       </div>
       <form id="future-devops">
-        <button type="submit" align="right">Find some winners</button>
+        <button type="submit" align="right">Find winners</button>
       </form>
       <div id="result"></div>
       <div id="loading" class="spinner">
