--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@ alex@express42.com</textarea>
         <div class="bounce2"></div>
         <div class="bounce3"></div>
       </div>
-      <script type="text/javascript" src="submitForm.js"></script>
+      <script type="text/javascript" src="client.js"></script>
     </div>
   </body>
 </html>
