Added line count

--- a/static/index.html
+++ b/static/index.html
@@ -7,14 +7,94 @@
     <div id="container">
       <h1>Future DevOps Recognizer</h1>
       <div id="col1">
-        <h2>Tools</h2>
-        <textarea id="tools" name="tools" form="future-devops" onfocus="reveal_input();">kubernetes
-docker</textarea>
+        <h2 id="Tools-header">Tools</h2>
+        <textarea id="Tools" name="tools" form="future-devops" onfocus="reveal_input();" onchange="count_lines('Tools');">Chef
+Ansible
+Puppet
+Salstack
+Terraform
+Packer
+Vagrant
+Artifactory
+Nexus
+Cucumber
+Jenkins
+Bamboo
+TeamCity
+GoCD
+Concourse
+TravisCI
+CircleCI
+Capistrano
+Graphite
+Grafana
+Prometheus
+Zabbix
+Sensu
+Monit
+Graylog
+Elasticsearch
+Logstash
+Kibana
+PagerDuty
+OpsGenie
+Docker
+rkt
+DC/OS
+Rancher
+Mesos
+Marathon
+Kubernetes
+OpenStack
+GCE
+AWS
+DigitalOcean
+Azure</textarea>
       </div>
       <div id="col2">
-        <h2>Emails</h2>
-        <textarea id="emails" name="emails" form="future-devops" onfocus="reveal_input();">vkhabarov@express42.com
-alex@express42.com</textarea>
+        <h2 id="Emails-header">Emails</h2>
+        <textarea id="Emails" name="emails" form="future-devops" onfocus="reveal_input();" onchange="count_lines('Emails');">fwitness@me.com
+reziac@yahoo.com
+spadkins@hotmail.com
+gilmoure@yahoo.com
+cgarcia@yahoo.com
+luebke@optonline.net
+wojciech@yahoo.ca
+dsugal@hotmail.com
+redingtn@verizon.net
+metzzo@hotmail.com
+fglock@att.net
+burniske@me.com
+ianbuck@icloud.com
+amichalo@optonline.net
+harryh@icloud.com
+koudas@sbcglobal.net
+rsteiner@mac.com
+helger@gmail.com
+conteb@outlook.com
+storerm@me.com
+crimsane@yahoo.ca
+simone@live.com
+cliffordj@optonline.net
+zilla@aol.com
+kingma@comcast.net
+plover@aol.com
+jbailie@outlook.com
+qrczak@mac.com
+gward@verizon.net
+hauma@verizon.net
+hillct@verizon.net
+cliffordj@optonline.net
+slanglois@comcast.net
+arebenti@live.com
+stellaau@msn.com
+bhtower@att.net
+roamer@comcast.net
+tubesteak@hotmail.com
+muzzy@icloud.com
+karasik@yahoo.com
+dwsauder@hotmail.com
+crusader@comcast.net</textarea>
       </div>
       <form id="future-devops">
         <button type="submit" align="right">Find winners</button>
