--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
       <h1>Future DevOps Recognizer</h1>
       <div id="col1">
         <h2 id="Tools-header">Tools</h2>
-        <textarea id="Tools" name="tools" form="future-devops" onfocus="reveal_input();" onchange="count_lines('Tools');">Chef
+        <textarea id="Tools" name="tools" form="future-devops" onfocus="reveal_input();" onkeyup="count_lines('Tools');">Chef
 Ansible
 Puppet
 Salstack
@@ -53,7 +53,7 @@ Azure</textarea>
       </div>
       <div id="col2">
         <h2 id="Emails-header">Emails</h2>
-        <textarea id="Emails" name="emails" form="future-devops" onfocus="reveal_input();" onchange="count_lines('Emails');">fwitness@me.com
+        <textarea id="Emails" name="emails" form="future-devops" onfocus="reveal_input();" onkeyup="count_lines('Emails');">fwitness@me.com
 reziac@yahoo.com
 spadkins@hotmail.com
 gilmoure@yahoo.com
