Rename Email ids

--- a/static/index.html
+++ b/static/index.html
@@ -52,9 +52,9 @@ DigitalOcean
 Azure</textarea>
       </div>
       <div id="col2">
-        <h2 id="Emails-hidden-header">Emails</h2>
+        <h2 id="Emails-header">Emails</h2>
         <div
-          id="Emails"
+          id="Emails-container"
           class="textArea"
           onclick="document.getElementById('files').click();"
         >
@@ -62,7 +62,7 @@ Azure</textarea>
         <div id="Emails-text"></div>
         </div>
         <input type="file" id="files" style="display:none;">
-        <textarea id="Emails-hidden" style="display:none;"></textarea>
+        <textarea id="Emails" style="display:none;"></textarea>
       </div>
       <form id="future-devops">
         <button type="submit" align="right">Find winners</button>
